# alarm-app-v2

./: README.md  index.html  package.json  powershell.json  run.ps1  run.sh  tailwind.config.ts  vite.config.ts
.github/workflows/: ci.yml  release.yml
.lovable/: plan.md
.lovable/memories/: 00-memory-index.md  readme.md
.lovable/memory/: index.md
linter-scripts/: check-axios-version.sh  run.sh  validate-guidelines.go  validate-guidelines.py
linters/golangci-lint/: .golangci.yml
linters/phpcs/: coding-guidelines-ruleset.xml
linters/sonarqube/: coding-guidelines-profile-typescript.xml  coding-guidelines-profile.xml
public/: manifest.json
scripts/: install.ps1.tmpl  install.sh.tmpl
spec/: 00-overview.md  99-consistency-report.md  dashboard-data.json  folder-structure-root.md  health-dashboard.md  spec-index.md
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: V1__initial_schema.sql  V2__seed_quotes.sql  V3__alarm_position.sql
src-tauri/src/: commands_registration.rs  errors.rs  lib.rs  main.rs
src-tauri/src/audio/: gradual_volume.rs  mod.rs  platform_macos.rs  player.rs
src-tauri/src/commands/: alarm.rs  audio.rs  challenge.rs  export_import.rs  group.rs  history.rs  mod.rs  personalization.rs  settings.rs  snooze.rs  webhook.rs  wellness.rs
src-tauri/src/engine/: alarm_engine.rs  mod.rs  scheduler.rs  timezone_watcher.rs
src-tauri/src/engine/wake_listener/: linux.rs  macos.rs  mod.rs  windows.rs
src-tauri/src/notifications/: mod.rs
src-tauri/src/storage/: db.rs  models.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/webhooks/: errors.rs  mod.rs
(+402 files in other folders)
