[package]
name = "alarm-app"
version = "1.1.0"
edition = "2021"

[dependencies]
# Tauri core
tauri = { version = "=2.10.3", features = ["tray-icon", "global-shortcut"] }

# Tauri plugins
tauri-plugin-notification = "=2.3.3"
tauri-plugin-dialog = "=2.7.0"
tauri-plugin-fs = "=2.5.0"
tauri-plugin-autostart = "=2.5.1"
tauri-plugin-updater = "=2.10.1"
tauri-plugin-global-shortcut = "=2.3.1"

# Database
rusqlite = { version = "=0.32.1", features = ["bundled"] }
refinery = { version = "=0.8.14", features = ["rusqlite"] }

# Audio
rodio = "=0.19.0"

# Date/time
chrono = { version = "=0.4.44", features = ["serde"] }
chrono-tz = "=0.10.4"
croner = "=2.0.7"

# Serialization
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"

# Error handling
thiserror = "=2.0.18"

# HTTP (webhooks)
reqwest = { version = "=0.12.12", features = ["json", "rustls-tls"], default-features = false }
url = "=2.5.4"

# Utilities
uuid = { version = "=1.23.0", features = ["v4"] }
tokio = { version = "=1.51.1", features = ["full"] }
rand = "=0.8.5"
tracing = "=0.1.44"
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }
tracing-appender = "=0.2.4"
iana-time-zone = "=0.1.63"

# Platform-specific (conditional)
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "=0.5.2"
core-foundation = "=0.10.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "=0.58.0", features = ["Win32_System_Power"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "=4.4.0"
futures-lite = "=2.5.0"

[build-dependencies]
tauri-build = { version = "=2.5.6", features = [] }
